updating with new Temporal information

--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Mason Egger}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Times New Roman} Devoloper Advocate, Community Leader, Programmer}\\[15pt]\par} 
+{\color{headings}\fontspec[Variant = 2]{Times New Roman} Programmer, Educator, Community Organizer}\\[15pt]\par} 
     
 %----------------------------------------------------------------------------------------
 
@@ -85,7 +85,7 @@
 %   OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Community leader and advocate who loves teaching and helping people grow. Previously worked in various engineering roles, both software and systems, with a penchant for security, automation, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open-source and building community. \\
+Community leader and educator who loves teaching and helping people grow. Previously worked in various engineering roles, both software and systems, with a penchant for security, automation, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open-source and building community. \\
 
 %----------------------------------------------------------------------------------------
 %       Current WORK EXPERIENCE
@@ -97,27 +97,25 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 % Current Work Experience
 %------------------------------------------------
 
-{\raggedright\large Lead Developer Advocate\\
-\small \textit{April 2022 - Present}\\
-\small \textit{Gretel.ai, Remote} \\}
+{\raggedright\large Sr. Technical Curriclum Developer\\
+\small \textit{January 2023 - Present}\\
+\small \textit{Temporal, Remote} \\} 
 
 \normalsize{
-    Launched the Developer Relations program at Grete0l as the first official hire. Defined DevRel's function within the company, established goals and  processes in alignment with the companies OKRs, and determined appropriate metrics to gauge DevRel's success. Developed technical educational content around Gretel use-cases, deployments, and synthetic data. Established the Synthetic Data Community Discord with Gretel as the primary sponsor. \\
+    Responsible for creating and delivering accurate, high-quality, useful educational content in the form of tutorials, online self-paced courses, and videos to educate Temporal's users. Distilled complex distributed systems and Temporal concepts into approachable educational content. Designed new courses, exercises, code samples, and assesments on Temporal features as well as ported courses between supported language SDKs. Contributed both long form and short form content across various tutorials, developer guides, and documentation. Delivered live versions of our online courses both in-person and virtually.
+} \\
 
-    Focus on the 4Cs of Advocacy: 
+\section{Selected Work Experience} 
 
-    \begin{itemize}
-        \item \textit{Code} - Contributed to relevant open-source projects such as the Gretel's sample code applications and built out CICD pipelines for publishing educational content.
-    
-        \item \textit{Content} - Produced high-quality, high-performing educational resources about synthetic data, Gretel's products, and open-source technologies in the form of tutorials, blogs, and videos.
-    
-        \item \textit{Community} - Engaged with developer communities at physical and virtual events. Presented workshops, webinars, and talks at universities, meetups, and conferences, both in-person and virtually. Active in social channels where developers congregate. Launched and moderated Gretel's community spaces on Slack and Discord.
-        
-        \item \textit{Consulting} - Continuously aided non-technical employees at Gretel in their programs, ensuring the consistency and accuracy of our developer voice. Brought relevant feedback from the community to multiple teams, including sales, marketing, and product.
-    \end{itemize}
+%----------------------------------------------------------------------------------------
+%   Previous Work Experience
+%----------------------------------------------------------------------------------------
+{\raggedright\large Lead Developer Advocate\\
+\small \textit{April 2022 - January 2023}\\
+\small \textit{Gretel.ai, Remote}} \\ \\
+\normalsize{
+    Gretel's first official Developer Relations hire. Established procedures, goals, and purpose of Developer Relations at Gretel. Responsible for fostering and building the Gretel and Synthetic Data Communities. Spoke at many conferences educating audiences about Synthetic Data and its applications. Aided in the creation and organization of Gretel's first conference, \_synthesize. 
 }
-
-
 
 \end{minipage} % End the left-hand side of the page
 \hfill
@@ -154,13 +152,40 @@ Dev. Relations
 Languages 
 & Python, Golang, Java \\ \\
 Frameworks 
-& Django, Flask, Hugo \\ \\
+& Temporal, Django, Flask, Hugo \\ \\
 DevOps 
 & Terraform, Docker, Ansible,\\ 
 & Packer, CI/CD, Networking, \\ 
 & Cloud Architecture, Linux\\ \\
 \end{tabular}
 
+
+%----------------------------------------------------------------------------------------
+% Community & Open Source
+%----------------------------------------------------------------------------------------
+\section{PyTexas}
+
+\begin{tabular}{ll}
+\textbf{\href{https://pytexas.org}{PyTexas Foundation}}\\
+\tab\textit{2022 - present} - President\\
+\tab President of the PyTexas Foundation, a 501(c)(3)    \\
+\tab non-profit dedicated to building the Python Community \\
+\tab in Texas. \\
+\\
+
+\textbf{\href{https://pytexas.org/2024}{PyTexas Conference}}\\
+\tab\textit{2022 - present} - Conference  Chair\\
+\tab Conference Chair for the oldest regional   \\
+\tab Python conference and largest Python event in Texas. \\
+\\
+
+\textbf{\href{https://pytexas.org/meetup}{PyTexas Meetup}}\\
+\tab\textit{2022 - present} - Organizer\\
+\tab Founding organizer of the virtual monthly meetup of   \\
+\tab the PyTexas Community. \\
+\\
+
+\end{tabular}\\
 
 %----------------------------------------------------------------------------------------
 % Community & Open Source
@@ -173,16 +198,6 @@ DevOps
 \tab open source program in the world. \\ 
 \\
 
-\textbf{\href{https://pytexas.org}{PyTexas}}\\
-\tab Organizer, Conference Chair for the oldest regional   \\
-\tab Python conference and largest Python event in Texas. \\
-\\
-
-\textbf{\href{https://pytexas.org}{PyTexas Foundation}}\\
-\tab President of the PyTexas Foundation, a 501(c)(3) non-profit   \\
-\tab dedicated to expanding the use of Python in Texas \\
-\\
-
 \textbf{\href{https://www.digitalocean.com/community/users/masonegger?subtype=tutorial}{DigitalOcean Community Author}}\\
 \tab Authored multiple high performing tutorials on the  \\
 \tab famed DigitalOcean Community Tutorial site. \\
@@ -192,6 +207,50 @@ DevOps
 \tab Active Open Source contributor. \\
 
 \end{tabular}\\
+    
+\end{minipage} % End right-hand side of the page
+\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
+\vspace{0pt}  % Trick for alignment 
+\section{Selected Work Experience Cont.} 
+
+%----------------------------------------------------------------------------------------
+%   Previous Work Experience
+%----------------------------------------------------------------------------------------
+
+{\raggedright\large Sr. Developer Advocate\\
+\small \textit{June 2021 - April 2022}\\
+\small \textit{DigitalOcean, Remote} \\
+\raggedright\small \textit{Developer Advocate: October 2019 - June 2021}\\[5pt]}
+
+\normalsize{
+    Responsible for fostering the growth, education, and satisfaction of the DigitalOcean developer community. Lead advocate for the Infrastructure as a Service-based products DigitalOcean, aiding in multiple Go-To-Market activities for new products. Involved in the planning and execution of DigitalOcean community events such as Deploy, Tech Talks, and Hacktoberfest. Lead the creation of an external, open-source focused Advisory Board to help guide the direction of Hacktoberfest. Contributed to relevant open-source projects such as the DigitalOcean Terraform provider and DigitalOcean classroom. Created high-quality polyglot code samples to demonstrate DigitalOcean products and cloud architecture. Implemented a company-wide educational series on all DigitalOcean products that is now a part of all new-hire onboarding. Organized, planned, and executed strategy as Program lead to expand and activate DigitalOcean's community content creators, the Navigators. \\
+}
+
+{\raggedright\large Sr. Site Reliability Engineer\\
+\small \textit{Mar 2018 - Sep 2019}\\
+\small \textit{Vrbo, Austin, TX} \\}
+
+\normalsize{Responsible for Vrbo's highly available Platform as a Service used for all application deployments and container orchestration across Vrbo's 1000+ node hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first-class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. }\\
+
+{
+\raggedright\large  Software Engineer II\\
+\small \textit{Oct 2017 - Mar 2018}\\
+\small \textit{Forcepoint, Austin, TX}\\
+\raggedright\small \textit{Software Engineer I: May 2017 - Oct 2017}\\
+\raggedright\small \textit{Associate Software Engineer: Dec 2015 - May 2017}\\
+[5pt]
+}
+
+\normalsize{Designed and implemented a Cloud-based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the codebase. Promoted multiple times within same team.}\\
+
+
+A full accounting of my work experience can be found on my  \href{https://www.linkedin.com/in/mason-egger/}{LinkedIn}\\ 
+
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
+\vspace{0pt} % Trick for alignment
+
 %----------------------------------------------------------------------------------------
 %   Speaking
 %----------------------------------------------------------------------------------------
@@ -216,49 +275,6 @@ DevOps
 A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.dev/speaking}\\
 
 \end{tabular}\\
-    
-\end{minipage} % End right-hand side of the page
-\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
-\vspace{0pt} % Trick for alignment
-\section{Selected Work Experience} 
-
-%----------------------------------------------------------------------------------------
-%   Previous Work Experience
-%----------------------------------------------------------------------------------------
-{\raggedright\large Sr. Developer Advocate\\
-\small \textit{June 2021 - Present}\\
-\small \textit{DigitalOcean, Remote} \\
-\raggedright\small \textit{Developer Advocate: October 2019 - June 2021}\\[5pt]}
-
-\normalsize{
-    Responsible for fostering the growth, education, and satisfaction of the DigitalOcean developer community. Lead advocate for the Infrastructure as a Service-based products DigitalOcean, aiding in multiple Go-To-Market activities for new products. Involved in the planning and execution of DigitalOcean community events such as Deploy, Tech Talks, and Hacktoberfest. Lead the creation of an external, open-source focused Advisory Board to help guide the direction of Hacktoberfest. Contributed to relevant open-source projects such as the DigitalOcean Terraform provider and DigitalOcean classroom. Created high-quality polyglot code samples to demonstrate DigitalOcean products and cloud architecture. Implemented a company-wide educational series on all DigitalOcean products that is now a part of all new-hire onboarding. Organized, planned, and executed strategy as Program lead to expand and activate DigitalOcean's community content creators, the Navigators. \\
-}
-
-{\raggedright\large Sr. Software Engineer\\
-\small \textit{Jul 2019 - Sep 2019}\\
-\small \textit{Vrbo, Austin, TX} \\
-\raggedright\small \textit{Sr. Site Reliability Engineer: Mar 2018 - Jul 2019}\\[5pt]}
-
-\normalsize{Responsible for Vrbo's highly available Platform as a Service used for all application deployments and container orchestration across Vrbo's 1000+ node hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first-class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. }\\
-
-{
-\raggedright\large  Software Engineer II\\
-\small \textit{Oct 2017 - Mar 2018}\\
-\small \textit{Forcepoint, Austin, TX}\\
-\raggedright\small \textit{Software Engineer I: May 2017 - Oct 2017}\\
-\raggedright\small \textit{Associate Software Engineer: Dec 2015 - May 2017}\\
-[5pt]
-}
-
-\normalsize{Designed and implemented a Cloud-based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the codebase. Promoted multiple times within same team.}\\
-
-
-A full accounting of my work experience can be found on my  \href{https://www.linkedin.com/in/mason-egger/}{LinkedIn}\\ 
-
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
-\vspace{0pt} % Trick for alignment
 
 
 %----------------------------------------------------------------------------------------
@@ -270,9 +286,17 @@ A full accounting of my work experience can be found on my  \href{https://www.li
 \begin{tabular}{ll} % Start a table with two columns, one for dates and one for qualifications
 
 %------------------------------------------------
+% EDUCATION 
+%------------------------------------------------
+\textbf{Select Graduate Courses} \\ 
+& \textsc{Computer Science} \\ 
+& \textit{Georgia Institute of Technology}\\
+
+
+%------------------------------------------------
 % EDUCATION 2
 %------------------------------------------------
-2015 \textbf{Bachelor of Science} \\ 
+\textbf{Bachelor of Science} \\ 
 & \textsc{Computer Science} \\ 
 & \textit{Texas State University}\\
 
@@ -281,7 +305,7 @@ A full accounting of my work experience can be found on my  \href{https://www.li
 % EDUCATION 3
 %------------------------------------------------
 
-2015 \textbf{Bachelor of Arts} \\ 
+\textbf{Bachelor of Arts} \\ 
 & \textsc{Music}, \textit{Trombone}\\ 
 & \textit{Texas State University}\\ \\
 
@@ -342,7 +366,7 @@ A full accounting of my work experience can be found on my  \href{https://www.li
 \section{Miscellaneous} 
 
 \begin{tabular}{ll}
-Albums: \href{https://txstatetrombone.com/trombones-at-texas-state-university}{Trombones at Texas State}, \href{https://txstatetrombone.com/carol-of-the-bones}{Carol of the Bones} \\
+Albums: Trombones at Texas State, Carol of the Bones \\
 \end{tabular}\\
 
 \end{minipage}
