adding a few links

--- a/resume.tex
+++ b/resume.tex
@@ -341,12 +341,12 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 \section{Volunteer} 
 
 \begin{tabular}{ll}\
-\textbf{Phi Mu Alpha Sinfonia Fraternity}\\
+\href{https://province9.org}{\textbf{Phi Mu Alpha Sinfonia Fraternity}}\\
 \tab\textit{2022} - Deputy Province Governor\\
 \tab\tab\textit {Province 9, South Texas}\\
 \\
 
-\textbf{Microsoft TEALS}\\
+\href{https://www.microsoft.com/en-us/teals}{\textbf{Microsoft TEALS}}\\
 \tab\textit{2019-2020} - Classroom Enrichment Guest Lecturer\\
 \tab\textit{2018-2019} - Co-Teacher, AP Computer Science A\\
 \tab\tab\textit {IDEA Montopolis, High School}\\
