more tiny tweaks

--- a/resume.tex
+++ b/resume.tex
@@ -167,20 +167,20 @@ DevOps
 
 \begin{tabular}{ll}
 \textbf{\href{https://pytexas.org}{PyTexas Foundation}}\\
-\tab\textit{2022 - present} - President\\
+\tab\textit{2022—present}: President\\
 \tab President of the PyTexas Foundation, a 501(c)(3)    \\
 \tab non-profit dedicated to building the Python Community \\
 \tab in Texas. \\
 \\
 
 \textbf{\href{https://pytexas.org/2024}{PyTexas Conference}}\\
-\tab\textit{2022 - present} - Conference  Chair\\
+\tab\textit{2022—present}: Conference  Chair\\
 \tab Conference Chair for the oldest regional   \\
 \tab Python conference and largest Python event in Texas. \\
 \\
 
 \textbf{\href{https://pytexas.org/meetup}{PyTexas Meetup}}\\
-\tab\textit{2022 - present} - Organizer\\
+\tab\textit{2022—present}: Organizer\\
 \tab Founding organizer of the virtual monthly meetup of   \\
 \tab the PyTexas Community. \\
 \\
@@ -342,19 +342,19 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 
 \begin{tabular}{ll}\
 \href{https://province9.org}{\textbf{Phi Mu Alpha Sinfonia Fraternity}}\\
-\tab\textit{2022} - Deputy Province Governor\\
+\tab\textit{2022—present}: Deputy Province Governor\\
 \tab\tab\textit {Province 9, South Texas}\\
 \\
 
 \href{https://www.microsoft.com/en-us/teals}{\textbf{Microsoft TEALS}}\\
-\tab\textit{2019-2020} - Classroom Enrichment Guest Lecturer\\
-\tab\textit{2018-2019} - Co-Teacher, AP Computer Science A\\
+\tab\textit{2019—2020}: Classroom Enrichment Guest Lecturer\\
+\tab\textit{2018—2019}: Co-Teacher, AP Computer Science A\\
 \tab\tab\textit {IDEA Montopolis, High School}\\
 \\
 
 \textbf{Texas State University}\\
-\tab\textit{2015-present} - Guest Lecturer\\
-\tab\textit{2018-present} - Industrial Advisory Board Member\\
+\tab\textit{2015—present}: Guest Lecturer\\
+\tab\textit{2018—present}: Industrial Advisory Board Member\\
 \\
 
 \end{tabular}\\
