--- a/resume.tex
+++ b/resume.tex
@@ -97,9 +97,9 @@ Community leader and educator who loves teaching and helping people grow. Previo
 % Current Work Experience
 %------------------------------------------------
 
-{\raggedright\large Sr. Technical Curriclum Developer\\
+{\raggedright\large Sr. Technical Curriculum Developer\\
 \small \textit{January 2023 - Present}\\
-\small \textit{Temporal, Remote} \\} 
+\small \textit{Temporal, Remote}} \\
 
 \normalsize{
     Responsible for creating and delivering accurate, high-quality, useful educational content in the form of tutorials, online self-paced courses, and videos to educate Temporal's users. Distilled complex distributed systems and Temporal concepts into approachable educational content. Designed new courses, exercises, code samples, and assesments on Temporal features as well as ported courses between supported language SDKs. Contributed both long form and short form content across various tutorials, developer guides, and documentation. Delivered live versions of our online courses both in-person and virtually.
@@ -143,20 +143,21 @@ Community leader and educator who loves teaching and helping people grow. Previo
 \section{Skills} 
 
 \begin{tabular}{rl}
-People
-& Team Building, Mentoring, Coaching, \\ 
-& Program Management, Community Engagement \\ \\
 Dev. Relations 
 & Public Speaking, Technical Writing, \\ 
-& Evangelism, Developer Education \\ \\
+& Evangelism, Developer Education \\ 
+& Community Building \& Engagement \\ \\
 Languages 
-& Python, Golang, Java \\ \\
+& Python, Java, Golang \\ \\
 Frameworks 
 & Temporal, Django, Flask, Hugo \\ \\
 DevOps 
 & Terraform, Docker, Ansible,\\ 
 & Packer, CI/CD, Networking, \\ 
 & Cloud Architecture, Linux\\ \\
+People
+& Team Building, Mentoring, Coaching, \\ 
+& Program Management\\ \\
 \end{tabular}
 
 
@@ -244,7 +245,7 @@ DevOps
 \normalsize{Designed and implemented a Cloud-based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the codebase. Promoted multiple times within same team.}\\
 
 
-A full accounting of my work experience can be found on my  \href{https://www.linkedin.com/in/mason-egger/}{LinkedIn}\\ 
+A full accounting of my work experience can be found on my \href{https://www.linkedin.com/in/mason-egger/}{LinkedIn}\\ 
 
 \end{minipage}
 \hfill
@@ -259,17 +260,21 @@ A full accounting of my work experience can be found on my  \href{https://www.li
 
 \begin{tabular}{ll}
 
+\textbf{\href{https://mason.dev/speaking}{Conference \& Meetup Speaker}} \\
+\tab Highly sought after speaker, presented talks across \\ 
+\tab multiple states, countries, and continents. \\
+
+\textbf{Podcast Guest} \\
+\tab Guest on various podcasts. \\
+
+\textbf{Tech Talks} \\
+\tab Technical presentations around developer tools, \\
+\tab open source, and more. \\
+
+
 \textbf{\href{https://www.digitalocean.com/community/pages/cloud-chats}{Cloud Chats}} \\
 \tab Past host on a weekly web show discussing news, \\
 \tab community, and developer topics.\\
-
-\textbf{Tech Talks} \\
-\tab Perodical talks regarding different tech tools. \\
-\tab Performed at both DigitalOcean and Gretel\\
-
-\textbf{\href{https://mason.dev/speaking}{Conference Speaker}} \\
-\tab Highly sought after speaker, presented talks across \\ 
-\tab multiple states, countries, and continents. \\
 \\
 
 A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.dev/speaking}\\
