--- a/resume.tex
+++ b/resume.tex
@@ -102,7 +102,7 @@ Community leader and educator who loves teaching and helping people grow. Previo
 \small \textit{Temporal, Remote}} \\
 
 \normalsize{
-    Responsible for creating and delivering accurate, high-quality, useful educational content in the form of tutorials, online self-paced courses, and videos to educate Temporal's users. Distilled complex distributed systems and Temporal concepts into approachable educational content. Designed new courses, exercises, code samples, and assesments on Temporal features as well as ported courses between supported language SDKs. Contributed both long form and short form content across various tutorials, developer guides, and documentation. Delivered live versions of our online courses both in-person and virtually.
+    Responsible for creating and delivering accurate, high-quality, objective-based educational content in the form of tutorials, online self-paced courses, and videos to educate Temporal's users. Distilled complex distributed systems and Temporal concepts into approachable educational content. Designed new courses, exercises, code samples, and assesments on Temporal features as well as ported courses between supported language SDKs. Contributed both long form and short form content across various tutorials, developer guides, and documentation. Delivered live versions of our online courses both in-person and virtually for both community events and customer engagements.
 } \\
 
 \section{Selected Work Experience} 
@@ -261,16 +261,11 @@ A full accounting of my work experience can be found on my \href{https://www.lin
 \begin{tabular}{ll}
 
 \textbf{\href{https://mason.dev/speaking}{Conference \& Meetup Speaker}} \\
-\tab Highly sought after speaker, presented talks across \\ 
-\tab multiple states, countries, and continents. \\
+\tab Highly sought after speaker, presented talks and   \\ 
+\tab workshops around the world. \\
 
 \textbf{Podcast Guest} \\
 \tab Guest on various podcasts. \\
-
-\textbf{Tech Talks} \\
-\tab Technical presentations around developer tools, \\
-\tab open source, and more. \\
-
 
 \textbf{\href{https://www.digitalocean.com/community/pages/cloud-chats}{Cloud Chats}} \\
 \tab Past host on a weekly web show discussing news, \\
@@ -278,6 +273,30 @@ A full accounting of my work experience can be found on my \href{https://www.lin
 \\
 
 A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.dev/speaking}\\
+
+\end{tabular}\\
+
+%----------------------------------------------------------------------------------------
+%   AWARDS
+%----------------------------------------------------------------------------------------
+
+\section{Awards} 
+
+\begin{tabular}{rl}
+
+2024     & \textbf{Community Service Award}\\
+    & \textit{Python Software Foundation} \\\\    
+
+2021     & \textbf{Marketing STARfish Award}\\
+& \textit{DigitalOcean} \\\\
+
+2016     & \textbf{Silver Performance Award}\\
+& \textit{Forcepoint}\\ \\
+
+2013-2015     & \textbf{Excellence in Service 2013, 2015}\\
+& \textbf{Excellence in Teaching 2014}\\
+& \textbf{Undergraduate Academic Distinction 2014}\\
+& \textit{Texas State University}\\\\
 
 \end{tabular}\\
 
@@ -318,26 +337,6 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 
 %----------------------------------------------------------------------------------------
 
-%----------------------------------------------------------------------------------------
-%   AWARDS
-%----------------------------------------------------------------------------------------
-
-\section{Awards} 
-
-\begin{tabular}{rl}
-
-2021     & \textbf{Marketing STARfish Award}\\
-& \textit{DigitalOcean} \\\\
-
-2016     & \textbf{Silver Performance Award}\\
-& \textit{Forcepoint}\\ \\
-
-2013-2015     & \textbf{Excellence in Service 2013, 2015}\\
-& \textbf{Excellence in Teaching 2014}\\
-& \textbf{Undergraduate Academic Distinction 2014}\\
-& \textit{Texas State University}\\\\
-
-\end{tabular}\\
 
 %----------------------------------------------------------------------------------------
 %   Volunteer
